syntax = "proto3";
package API;

message GetRequest {
  string key = 1;
}

message GetReply {
  string value = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutReply {
  bool isSuccess = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteReply {
  bool isSuccess = 1;
}

message ScanRequest {
  int64 start = 1;
  int64 limit = 2;
}

message ScanReply {
  repeated string result = 1;
}

service StoreService {
  rpc Get (GetRequest) returns (GetReply) {}

  rpc Put (PutRequest) returns (PutReply) {}

  rpc Delete (DeleteRequest) returns (DeleteReply) {}

  rpc Scan (ScanRequest) returns (ScanReply) {}
}

